--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
             rel="stylesheet"
             type="text/css"
     />
+    <link rel="stylesheet" href="/css/spinner.css">
     <title>Grammar 100</title>
 </head>
 <body>
+<div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     <section id="flashcard">
         <article class="card">
             <!-- progrerss bar -->
@@ -39,7 +41,7 @@
     <footer>
         Built with ES2016, Parcel & Sass &mdash;
         <a href="#"
-        >check out the code!</a
+        >Presented by Song Sung Tae</a
         >
     </footer>
 
