--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <title>Grammar 100</title>
 </head>
 <body>
+<div id="title">
+    <h1>Grammar Terms 100</h1>
+</div>
 <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     <section id="flashcard">
         <article class="card">
