--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <footer>
         Built with ES2016, Parcel & Sass &mdash;
-        <a href="#"
+        <a href="https://take2.tistory.com/"
         >Presented by Song Sung Tae</a
         >
     </footer>
